manifests/worker-deploy-istio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: temporal-money-transfer-worker
  name: temporal-money-transfer-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: temporal-money-transfer-worker
  template:
    metadata:
      labels:
        app: temporal-money-transfer-worker
      annotations:
        sidecar.istio.io/userVolumeMount: '[{"name":"client-credential", "mountPath":"/etc/certs", "readonly":true}]'
        sidecar.istio.io/userVolume: '[{"name":"client-credential", "secret":{"secretName":"client-credential"}}]'
    spec:
      containers:
      - image: pvsone/temporal-money-transfer-worker:1.0.0
        name: temporal-money-transfer-worker
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: originate-mtls-for-tmprl
spec:
  hosts:
  - ${TEMPORAL_NAMESPACE}.tmprl.cloud
  ports:
  - number: 7233
    name: grpc-port
    protocol: GRPC
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: originate-mtls-for-tmprl
spec:
  host: ${TEMPORAL_NAMESPACE}.tmprl.cloud
  trafficPolicy:
    tls:
      mode: MUTUAL
      clientCertificate: /etc/certs/tls.crt
      privateKey: /etc/certs/tls.key
      sni: ${TEMPORAL_NAMESPACE}.tmprl.cloud
